# picSSS

./: .gitignore  README.md  pubspec.yaml
.github/workflows/: build.yml
lib/: main.dart  native_bridge.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/Runner/: MainFlutterWindow.swift
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
rust/: Cargo.toml
rust/src/: lib.rs
test/: widget_test.dart
windows/: CMakeLists.txt
windows/runner/: CMakeLists.txt  Runner.rc  flutter_window.cpp  flutter_window.h  main.cpp  win32_window.cpp  win32_window.h
